@startuml Pattern_DAO

allowmixing

title Design Pattern - Data Access Object (DAO) Pattern

' ========== Classic Blue Style (Matching Sequence Diagrams) ==========
skinparam backgroundColor White
skinparam roundcorner 0
skinparam defaultFontName Arial
skinparam defaultFontSize 11

skinparam class {
    BackgroundColor #58d2f9
    BorderColor #282828
    FontColor Black
    FontStyle bold
    FontName Arial
    AttributeFontName Arial
    AttributeFontColor Black
    ArrowColor #282828
}

skinparam interface {
    BackgroundColor #58d2f9
    BorderColor #282828
    FontColor Black
    FontStyle bold
    FontName Arial
}

skinparam package {
    BackgroundColor White
    BorderColor #282828
    FontColor Black
    FontStyle bold
    FontName Arial
}

skinparam database {
    BackgroundColor #58d2f9
    BorderColor #282828
    FontColor Black
    FontName Arial
}

skinparam note {
    BackgroundColor #58d2f9
    BorderColor #282828
    FontName Arial
}

skinparam classAttributeIconSize 0

package "Service Layer (Client)" {
    class UserService {
        - userDao : UserDao
        --
        + login(String, String) : String
        + register(...) : String
        + getUserById(Long) : User
    }
}

package "DAO Interface" {
    interface UserDao <<interface>> {
        + findByUsername(String) : User
        + findById(Long) : User
        + findAll() : List<User>
        + save(User) : void
        + update(User) : void
        + delete(Long) : void
    }
}

package "DAO Implementation" {
    class UserDaoImpl {
        + findByUsername(String) : User
        + findById(Long) : User
        + findAll() : List<User>
        + save(User) : void
        + update(User) : void
        + delete(Long) : void
        --
        - mapRow(ResultSet) : User
    }
}

package "Model" {
    class User {
        - id : Long
        - username : String
        - passwordHash : String
        - email : String
        - role : UserRole
        - active : boolean
        --
        + getters/setters
    }
}

database "SQLite\nDatabase" as DB

' Relationships
UserService --> UserDao : uses interface
UserDaoImpl ..|> UserDao : implements
UserDaoImpl --> DB : CRUD operations
UserDaoImpl ..> User : creates/returns
UserService ..> User : uses

note right of UserDao
  **Interface defines contract:**
  - Abstract data operations
  - Hides implementation details
  - Enables mock testing
end note

note bottom of UserDaoImpl
  **Implementation handles:**
  - SQL queries
  - ResultSet mapping
  - Connection management
end note

note left of UserService
  **Client (Service Layer):**
  - Only knows interface
  - Independent of DB type
  - Easily testable
end note

@enduml

